# ydict

./: .pdm-python  Makefile  Pipfile  README.md  pyproject.toml  ydict.py  ylib.py
ydict_lib/: ylib.py
