[project]
name = "ydict"
version = "0.2.0"
description = "Default template for PDM package"
authors = [
    {name = "chu", email = "zh.c.l.z.95@gmail.com"},
    {name = "Alex", email = "zh.c.l.z.95@gmail.com"},
]
dependencies = [
    "beautifulsoup4",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
